--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -59,7 +59,12 @@
   <h1 class="no-comic">該当する作品が見つかりませんでした</h1>
   <p class="no-comic-p">キーワードを変えて、再検索してください</p>
   <%= image_tag ("neko.png"), class: "neko-img" %>
-  <%= link_to 'トップへ戻る', comics_path, class: "btn btn-sm btn-outline-primary no-comic-btn" %>
+
+  <div class="btn-group">
+    <div class="no-comic-btn">
+      <%= link_to 'トップへ戻る', comics_path, class: "btn btn-sm btn-outline-primary" %>
+    </div>
+  </div>
 <% end %>
 
   <%= paginate @comics, class: "paginate" %>
