--- a/app/views/comics/new.html.erb
+++ b/app/views/comics/new.html.erb
@@ -2,10 +2,12 @@
 <main>
 	<h5 class="new-messege-head">レビューしたい作品を検索してください</h5>
 	<div class=”search-box-cn”>
-	  <%= form_tag(search_comics_path, method: :'get', class: 'search-box-cn') do %>
-	    <%= text_field_tag :search, "", placeholder: "タイトルで検索", class: 'search-form-cn' %>
-	      <%= button_tag '<i class="fa fa-search"></i>'.html_safe, type: 'submit', :name => nil, class: 'search-btn-cn' %>
-	  <% end %>
+		<div class="search-form-cn">
+		  <%= form_tag(search_comics_path, method: :'get') do %>
+		    <%= text_field_tag :search, "", placeholder: "タイトルで検索", class: "search-form-cnin" %>
+		      <%= button_tag '<i class="fa fa-search"></i>'.html_safe, type: 'submit', :name => nil, class: 'search-btn-cn' %>
+		  <% end %>
+	  </div>
 	</div>
 
   <div class="new-messege">
