--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,21 @@
     </div>
 
     <% if @user.id==current_user.id %>
-    <%= link_to "編集",edit_user_path(@user), class: "btn btn-success edit-btn" %>
-    <button type="button" class="btn btn-link withdraw-btn" data-toggle="modal" data-target="#myModal" style="font-size: 12px;">
+    <div class="btn-group">
+      <div class="edit-btn">
+    <%= link_to "編集",edit_user_path(@user), class: "btn btn-success" %>
+         </div>
+       </div>
+         <div class="btn-group">
+          <div class="withdraw-btn">
+    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal" style="font-size: 12px;">
       退会希望
     </button>
+  </div>
+  </div>
+  </div>
+
+  </div>
     <% end %>
   </div>
 </div>
