--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="profile-content">
   <div class="prof-show">
     <div class="prof-imgname">
@@ -14,21 +13,16 @@
     </div>
 
     <% if @user.id==current_user.id %>
-    <div class="btn-group">
-      <div class="edit-btn">
-    <%= link_to "編集",edit_user_path(@user), class: "btn btn-success" %>
-         </div>
-       </div>
-         <div class="btn-group">
-          <div class="withdraw-btn">
-    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal" style="font-size: 12px;">
-      退会希望
-    </button>
-  </div>
-  </div>
-  </div>
-
-  </div>
+      <div class="btn-group">
+        <div class="edit-btn">
+          <%= link_to "編集",edit_user_path(@user), class: "btn btn-success" %>
+        </div>
+      </div>
+      <div class="btn-group">
+        <div class="withdraw-btn">
+          <button type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal" style="font-size: 12px;">退会希望</button>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
@@ -38,7 +32,7 @@
     <% @comics.each do |comic| %>
       <div class="comic-content">
         <div class="review-user">
-            <%= image_tag comic.user.prof_image.thumb.url, size:'35x35', class: "prof-image" %>
+          <%= image_tag comic.user.prof_image.thumb.url, size:'35x35', class: "prof-image" %>
           <div class="prof-name">
             <%= link_to comic.user.nickname, user_path(comic.user_id), class: "prof-name2" %>
           </div>
@@ -56,13 +50,13 @@
           <div class="comic-text">
             <% if comic.review.present? %>
               <div id="star-rate-<%= comic.review.id %>"></div>
-                <script type="text/javascript">
+              <script type="text/javascript">
                 $('#star-rate-<%= comic.review.id %>').raty({
                   path: '/assets',
                   readOnly: true,
                   score: <%= comic.review.star %>,
                 });
-                </script>
+              </script>
             <% end %>
             <div class="word">
               <% if comic.review.present? %>
@@ -83,9 +77,11 @@
         </div>
       </div>
     <% end %>
+
   <% else %>
     <p class="no-comic-p">レビューした作品はございません</p>
   <% end %>
+
 </main>
 
 
@@ -101,15 +97,15 @@
       </div>
       <div class="modal-body">
         <p>退会後は、以下の機能がご利用になれません</p></br>
-          <ul>
-            <li>Simic へログインすることができなくなります</li>
-            <li>Simic のすべての機能を利用することができなくなります</li>
-            <li>すべてのユーザーが、あなたのプロフィールページを閲覧することができなくなります</li>
-          </ul>
+        <ul>
+          <li>Simic へログインすることができなくなります</li>
+          <li>Simic のすべての機能を利用することができなくなります</li>
+          <li>すべてのユーザーが、あなたのプロフィールページを閲覧することができなくなります</li>
+        </ul>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
-         <%= link_to "退会する",user_path(@user), method: :delete, class: "btn btn-danger" %>
+        <%= link_to "退会する",user_path(@user), method: :delete, class: "btn btn-danger" %>
       </div><!-- /.modal-footer -->
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -117,7 +113,6 @@
 
 
 <style>
-
   .modal-body {
     height: 200px;
     margin:0 auto;
